--- a/css/login.css
+++ b/css/login.css
@@ -1,8 +1,5 @@
-
-
 body {font-family: Arial, Helvetica, sans-serif;}
-* {box-sizing: border-box
-}
+* {box-sizing: border-box}
 
 /* Full-width input fields */
 input[type=text], input[type=password] ,input[type=tel] {
@@ -20,11 +17,12 @@ input[type=text]:focus, input[type=password]:focus {
   outline: none;
 }
 
+
 .allinput{
     display: flex;
     justify-content: center;
     align-items: center;
-}
+  }
 
 hr {
   border: 1px solid #f1f1f1;
@@ -47,6 +45,7 @@ button:hover {
   opacity:1;
 }
 
+
 /* Float signup button and add an  width */
 .signupbtn {
   float: center;
@@ -56,6 +55,8 @@ button:hover {
 .nameditals {
   
   width: 100%;
+  
+
 }
 
 /* Add padding to container elements */
@@ -78,6 +79,3 @@ button:hover {
      width: 100%;
   }
 }
-
-
-
