--- a/css/signup.css
+++ b/css/signup.css
@@ -1,8 +1,5 @@
-
-
 body {font-family: Arial, Helvetica, sans-serif;}
-* {box-sizing: border-box
-}
+* {box-sizing: border-box}
 
 /* Full-width input fields */
 input[type=text], input[type=password] ,input[type=tel] {
@@ -20,11 +17,13 @@ input[type=text]:focus, input[type=password]:focus {
   outline: none;
 }
 
+
+
 .allinput{
     display: flex;
     justify-content: center;
     align-items: center;
-}
+  }
 
 hr {
   border: 1px solid #f1f1f1;
@@ -43,19 +42,25 @@ button {
   opacity: 0.9;
 }
 
+
+
 button:hover {
   opacity:1;
 }
+
 
 /* Float signup button and add an  width */
 .signupbtn {
   float: center;
   width: 40%;
+  
 }
 
 .nameditals {
   
   width: 100%;
+  
+
 }
 
 /* Add padding to container elements */
@@ -73,11 +78,8 @@ button:hover {
 }
 
 /* Change styles for cancel button and signup button on extra small screens */
-@media screen and (max-width: 300px) {
-  .cancelbtn, .signupbtn {
+@media screen and (max-width: 300px) { .signupbtn {
      width: 100%;
+     
   }
 }
-
-
-
